--- a/app/views/reviews/_index.html.erb
+++ b/app/views/reviews/_index.html.erb
@@ -1,6 +1,6 @@
 <div class="all-reviews">
-  <h3>Reviews for <%=product.name%></h3>
-
+  <h3>Reviews for <%=product.title%></h3>
+  
   <% product.reviews.each do |review| %>
     <%= render partial: "reviews/show", locals: {review: review} %>
   <% end %>
