--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
     <div class="card-container">
       <div class="cards">
         <p class="icon"><i class="fa fa-handshake-o" aria-hidden="true"></i></p>
-        <h3>Proprietary Technology</h3>
+        <h3>Propreitary Technology</h3>
         <ul>
           <li>Bringing visual and auditory step by step instructions to life</li>
           <li>Using augmented reality on your phone to access 3D directions from physical manual</li>
@@ -32,7 +32,7 @@
         </ul>
       </div>
     </div>
-
+    
     <div class="upc-search">
       <h3>Try it out!</h3>
       <h3>Search our database of manuals.</h3>
