--- a/app/views/products/upcsearch.html.erb
+++ b/app/views/products/upcsearch.html.erb
@@ -1,11 +1,8 @@
-<br>
-<br>
-<br>
 <div class="upc-manual-list">
-  <h1><%=@item_info[:results]["title"]%></h1><br><br>
+  <h1><%=@item_info[:results]["title"]%></h1>
   <%@item_info.each do |results, all|%>
     <%all.each do|key, value|%>
-    <%unless key == "images"|| key == "offers" || key == "size"|| key == "dimension" || key == "weight" || key == "currency"%>
+    <%unless key == "images"|| key =="offers"%>
       <p><%=key%>:</p>
       <%=value%><br><br>
       <%end%>
