--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,7 @@
       <h3>Bookmarks</h3>
       <ul>
         <%@user.products.each do |product|%>
-        <li><%=link_to "#{product.name}", product_url(product.id)%></li>
-        <br><a href="#{product.pdf_url}">Click for PDF Direction</a>
+        <li><%=link_to "#{product.title}", product_url(product.id)%></li>
         <%end%>
       </ul>
     </div>
@@ -19,10 +18,14 @@
       <h3>Reviews and Ratings</h3>
       <ul>
         <% @user.reviews.each do |review| %>
-        <li><%= link_to "#{review.product.name}", product_path(review.product.id) %>
+        <li><%= link_to "#{review.product.title}", product_path(review.product.id) %>
         - <%= review.difficulty_rating %></li>
         <% end %>
       </ul>
     </div>
   </section>
 </section>
+
+<h2>Ikea Product</h2>
+<%=@product.product_name %>
+<a href="https://docs.google.com/gview?url=http://www.ikea.com<%=@product.pdf_path%>&embedded=true">Assembly Instructions</a>
