--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <h1><%=@user.full_name.capitalize%>'s Profile Page</h1>
 
   <div class="ar-link">
-    <a href="BSDemoFinal://">Use AR with our app!</a><br/>
+    <a href="ibuiltbanner://">Use AR with our app!</a><br/>
   </div>
     <div class="user-bookmarks">
       <h3>Bookmarks</h3>
