--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,6 @@
     <%= f.text_field :full_name, placeholder: "Full Name" %>
     <%= f.email_field :email, placeholder: "Email" %>
     <%= f.password_field :password, placeholder: "Password" %>
-    <%= f.submit %>
+    <%= f.submit "Sign Up", :id => "btnSignup" %>
   <%end%>
 </section>
