--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,19 +4,14 @@
     <div class="product-results">
       <% @products.each do |product| %>
         <div class="product-item">
-          <%= link_to "#{product.title}", product_path(product.id) %>
+          <h1 class="product-name"><%=product.name%></h1>
+          <em><%=product.title%></em><br>
+          <img src="<%=product.image_url%>" alt="<%=product.name%>">
+          <%= link_to "Product Details", product_path(product.id) %><br>
+
           </div>
-      <% end %>
-      <br>
-      <br>
-      <h2>Ikea Products</h2>
-      <% @ikeas.each do |product| %>
-        <div class="product-item">
-          <%=product.product_name %>
-          <img src="<%="http://www.ikea.com#{product.photo_path}"%>" alt="">
-          <iframe src="https://docs.google.com/gview?url=http://www.ikea.com<%=product.pdf_path%>&embedded=true" style="width:1170px; height:800px;" frameborder="0"></iframe>
-          <a href="https://docs.google.com/gview?url=http://www.ikea.com<%=product.pdf_path%>&embedded=true">Assembly Instructions</a>
-          </div>
+          <br>
+          <br>
       <% end %>
     </div>
   </div>
