--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <section class="standard-form container">
   <%= render partial: "partials/errors"%>
-  <%= form_for :html => {:id => "signUpForm"} @user do  |f| %>
+  <%= form_for @user, :html => {:id => "signUpForm"}  do  |f| %>
     <h3>Sign Up</h3>
     <%= f.text_field :full_name, placeholder: "Full Name" %>
     <%= f.email_field :email, placeholder: "Email" %>
