--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,10 @@
     <div class="product-results">
       <% @products.each do |product| %>
         <div class="product-item">
-          <%= link_to "#{product.title}", product_path(product.id) %>
+          <h1><%=product.name%></h1>
+          <p><%=product.title%></p>
+          <%= link_to image_tag(product.image_url, :alt= => "No image available"), product_path(product.id) %>
+          <%= link_to "Product Details", product_path(product.id) %>
           </div>
       <% end %>
     </div>
