--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,42 +1,33 @@
 <section class="padding-top container">
   <section class="manual-show">
-
-      <h1 class="product-name"> <%=@product.name%></h1>
-      <p class="product-title"> <%=@product.title%></p>
-      <p class="product-model"> <%=@product.model%></p>
-
-      <h1><%=@product.title%></h1>
-
-      <div class="bookmark">
-        <%if current_user%>
-          <% if bookmark?(params[:id]) %>
-            <%= render "bookmarks/delete"%>
-          <% else %>
-            <%= render "bookmarks/new", locals: {product: @product}%>
-          <%end%>
+    <h1> <%=@product.name%></h1>
+    <p class="product-title"> <%=@product.title%></p>
+    <p class="product-model"> <%=@product.model%></p>
+    <div class="bookmark">
+      <%if current_user%>
+        <% if bookmark?(params[:id]) %>
+          <%= render "bookmarks/delete"%>
+        <% else %>
+          <%= render "bookmarks/new", locals: {product: @product}%>
         <%end%>
-      </div>
-      <div class="product-info">
-          <%if @product.image_url%>
-            <div class="product-image">
-              <img src= <%=@product.image_url%> alt="No Product Image Available">
-            </div>
-          <%end%>
-          <h3>Product details:</h3>
-        <p><%=@product.description%></p>
-      </div>
-      
+      <%end%>
+    </div>
+    <div class="product-info">
+        <%if @product.image_url%>
+          <div class="product-image">
+            <img src= <%=@product.image_url%> alt="No Product Image Available">
+          </div>
+        <%end%>
+        <h3 class="title">Product details:</h3>
+      <p><%=@product.description%></p>
+    </div>
       <br>
-
-      <p>Scroll down for PDF assembly instructions & product reviews</p>
       <br>
         <iframe src="<%=@product.pdf_url%>"
           width="100%" height="800" >
           <p>Your browser does not support iframes.</p>
         </iframe>
-
       <br>
-
       <div class="all-reviews-container">
         <%= render partial: "reviews/index", locals: {product: @product}%>
       </div>
@@ -51,4 +42,3 @@
       </div>
   </section>
 </section>
-
