--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -247,20 +247,6 @@ footer .legal span {
   padding-bottom: 10px;
 }
 
-.intro .upc-search {
-  text-align: center;
-  padding: 30px 0px 20px;
-  margin-top: 20px;
-  border-top: 1px #444 solid;
-}
-
-.intro .upc-search form input[type="text"] {
-  margin-top: 30px;
-  width: 70%;
-  padding: 20px;
-  font-size: 25px;
-}
-
 /* forms */
 
 .standard-form {
@@ -308,21 +294,28 @@ footer .legal span {
   border-bottom: 1px solid #444;
 }
 
+.all-products h1 {
+  font-weight:bold;
+  font-size: 36px;
+  margin-bottom: 10px;
+}
 manual-show.title {
   font-weight:bold;
   font-size: 28px;
 }
+
 .product-results {
   margin: 20px 0px;
 }
 
 .product-item {
   text-align: center;
-  border-bottom: 2px solid white;
-
+  border-bottom: 2px solid #D3D3D3;
+  margin-bottom: 20px;
 }
 
-.product-item a {
+.product-item a.product-link {
+  margin-bottom: 20px;
   padding: 20px;
   width: 100%;
   height: 100%;
@@ -332,7 +325,7 @@ manual-show.title {
   text-decoration: none;
 }
 
-.product-item a:hover {
+.product-item  a.product-link:hover {
   background-color: #86c1dd;
   color: white;
 }
