--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,8 +7,8 @@
           <h1><%=product.name%></h1>
           <p><%=product.title%></p>
           <%= link_to image_tag(product.image_url, :alt= => "No image available"), product_path(product.id) %>
-          <%= link_to "Product Details", product_path(product.id) %>
-          </div>
+          <a class="product-link" href="<%=product_path(product.id) %>">Product Details</a>
+        </div>
       <% end %>
     </div>
   </div>
