--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
         <ul>
           <li>Bringing visual and auditory step by step instructions to life</li>
           <li>Using augmented reality on your phone to access 3D directions from physical manual</li>
-          <li>Technology for step by step assembly of funirtures based on 2D visual guide</li>
+          <li>Technology for step by step assembly of furnitures based on 2D visual guide</li>
         </ul>
       </div>
       <div class="cards">
